# scientific-mcps

./: ai_agent_tests.yaml  ai_test_loader.py  ppi_specification.md  run_ai_tests.py  test.sh  test_wrp.yaml  test_wrp_framework.py  test_wrp_helpers.py
.github/workflows/: ai-agent-tests.yml  test-chronomcp.yml
Adios/: plugin.yaml
Arxiv/: plugin.yaml
Chronolog/: plugin.yaml
Compression/: plugin.yaml
Darshan/: plugin.yaml
HDF5/: plugin.yaml
Jarvis/: plugin.yaml
Node_Hardware/: plugin.yaml
Pandas/: plugin.yaml
Parallel_Sort/: plugin.yaml
Plot/: plugin.yaml
Slurm/: plugin.yaml
examples/math-analysis-mcp/: CMakeLists.txt  README.md  demo_cpp.py  plugin.yaml  simple_test.py
examples/math-analysis-mcp/include/: json.hpp  math_operations.hpp  mcp_server.hpp
examples/math-analysis-mcp/src/: json.cpp  main.cpp  math_operations.cpp  mcp_server.cpp
examples/text-analysis-mcp/: README.md  demo.py  plugin.yaml  pyproject.toml
examples/text-analysis-mcp/src/: __init__.py  mcp_handlers.py  server.py
examples/text-analysis-mcp/src/capabilities/: __init__.py  keyword_extraction.py  readability_analysis.py  sentiment_analysis.py
lmod/: plugin.yaml
parquet/: plugin.yaml
